# fruitinfo

./: .gitignore  README.md  pyproject.toml
fruitinfo/: __init__.py  api.py  cli.py
tests/: README.md  test_generic.py  test_with_api.py
